<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/group"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/top_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/blood_donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:fontFamily="@font/opensanshebrew_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/email"
            android:visibility="gone"
            android:textColor="@color/black1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blood_donation" />

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_vector_person"
            android:hint="@string/enter_email"
            android:drawableTint="@color/maron"
            android:backgroundTint="@color/maron"
            android:padding="8dp"
            android:textColorHint="@color/hint_text_color"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/password"
            android:visibility="gone"
            android:textColor="@color/black1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_username" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_vector_lock"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:backgroundTint="@color/maron"
            android:padding="8dp"
            android:textColorHint="@color/hint_text_color"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <CheckBox
            android:id="@+id/checkBoxShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/show_password"
            android:checked="false"
            android:layout_marginTop="5sp"
            android:buttonTint="@color/maron"
            android:textColor="@color/hint_text_color1"
            android:fontFamily="@font/opensanshebrew_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_password" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72sp"
            android:layout_marginTop="17sp"
            android:text="@string/forgot_password1"
            android:textSize="15sp"
           android:textColor="@color/hint_text_color1"
            android:fontFamily="@font/opensanshebrew_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_password" />

        <TextView
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/opensanshebrew_regular"
            android:text="@string/reset_textview"
            android:textSize="15sp"
            android:textColor="#082AE9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_password" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/sign_in"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxShowPassword" />

        <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/don_t_have_account"
            android:textSize="15sp"
            android:textColor="@color/hint_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/opensanshebrew_regular"
            android:text="@string/sign_up"
            android:textColor="#082AE9"
            android:textSize="15sp"
            android:gravity="left"
            android:layout_marginStart="8sp"
            app:layout_constraintStart_toEndOf="@id/have_account"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            android:background="@drawable/ed_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>