<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkk"
    tools:context=".CreateRequestActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
            android:layout_marginStart="25dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:id="@+id/back_arrow"
            android:textColor="@color/black"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Request"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:textSize="25dp"
            android:id="@+id/reqest_text"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_let_us_know_if_ypu_need_the_blood_for_yourself_n_for_some_one_else"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:textSize="15dp"
        android:id="@+id/text"
        app:layout_constraintTop_toBottomOf="@+id/reqest_text"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170sp"
            android:layout_marginStart="30dp"
            android:text="My Self"
            android:fontFamily="@font/inter_bold"
            android:checked="true"
            android:id="@+id/radio1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170sp"
            android:layout_marginStart="30dp"
            android:text="For other"
            android:fontFamily="@font/inter_bold"
            android:checked="false"
            android:id="@+id/radio2"/>
    </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black1"
            android:id="@+id/name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/ed_name"
            android:background="@drawable/ed_border"
            android:padding="8dp"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Enter Name"
            android:paddingStart="15dp"
            android:layout_marginTop="5dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:drawablePadding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_name"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black1"
            android:id="@+id/phone"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/ed_phone"
            android:background="@drawable/ed_border"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Type Age"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:drawablePadding="8dp"/>
        <TextView
            android:id="@+id/bllod_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/blood_type"
            android:textColor="@color/black1"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_phone" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/spinner_border"
            app:layout_constraintTop_toBottomOf="@+id/bllod_type"
            android:entries="@array/select"/>
        <TextView
            android:id="@+id/required_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/required_unit"
            android:textColor="@color/black1"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/spinner_border"
            app:layout_constraintTop_toBottomOf="@+id/required_unit"
            android:entries="@array/select"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required_date"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner2"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black1"
            android:id="@+id/date_of_birth"
            android:layout_marginStart="35dp"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/ed_date_required"
            android:background="@drawable/ed_border"
            android:padding="8dp"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/dd_mm_yyyy"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/date_of_birth"
            android:drawablePadding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hospital"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_date_required"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black1"
            android:layout_marginTop="10dp"
            android:id="@+id/want_to_donate"
            android:layout_marginStart="35dp"
            android:textSize="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/no_yes"
            android:background="@drawable/ed_border"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Type here.."
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/want_to_donate"
            android:drawablePadding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_yes"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black1"
            android:id="@+id/hospital"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/ed_location"
            android:background="@drawable/ed_border"
            android:padding="8dp"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Type here..."
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/hospital"
            android:drawablePadding="8dp"/>

        <TextView
            android:id="@+id/send_request"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/signin_btn"
            android:gravity="center"
            android:text="@string/send_request"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_location" />
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_request" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>